--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
 
     <main>
         <div class="card-container">
-            <div class="mystery-card">
-                <i></i>
-                <h4 id="card-number">High or Low</h4>
-                <i></i>
+            <div class="mystery-card" id="mystery-card">
+                <i>♥️</i>
+                <h4 id="card-number">High Low</h4>
+                <i>♠️</i>
             </div>
         </div>
 
         <section class="output" id="output">
             <!-- <p>The number 4 is too low!</p> -->
+        </section>
+
+        <section class="user-input" id="user-input">
+            <!-- <button onclick="checkGuess(4)">4</button>
+            <button onclick="checkGuess(5)">5</button> -->
         </section>
     </main>
     <script src="app.js"></script>
