enhance card display with image and styling improvements

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <main>
         <div class="card-container">
             <div class="mystery-card" id="mystery-card">
-                <i>♥️</i>
-                <h4 id="card-number">High Low</h4>
-                <i>♠️</i>
+                <img src="https://opengameart.org/sites/default/files/card%20back%20red.png" alt="">
+                <div>
+                    <i>♥️</i>
+                    <h4 id="card-number">High Low</h4>
+                    <i>♠️</i>
+                </div>
             </div>
         </div>
 
